--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio controls autoplay loop hidden>
+        <source src="bgmusic.mp3" type="audio/mpeg">
+    </audio>
     <p><span class="typing"></span></p>
     
     <script src="typed.min.js"></script>
